plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.3'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.github.node-gradle.node' version '7.0.1' // ✅ Node plugin
}

group 'com.rms.projects'
version '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.apache.httpcomponents.client5:httpclient5'
    implementation 'org.apache.httpcomponents.core5:httpcore5'

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'

    // flyway
    implementation 'org.flywaydb:flyway-core'
    runtimeOnly 'org.flywaydb:flyway-database-postgresql'

    implementation 'org.jsoup:jsoup:1.15.3'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.1'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

    //poi
    implementation 'org.apache.commons:commons-text:1.11.0'
    // https://mvnrepository.com/artifact/org.apache.poi/poi
    implementation 'org.apache.poi:poi:5.2.5'
    // https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml
    implementation 'org.apache.poi:poi-ooxml:5.2.5'
    // https://mvnrepository.com/artifact/com.opencsv/opencsv
    implementation 'com.opencsv:opencsv:5.10'


    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}

// ✅ Configure Node plugin (Node will be downloaded if not found)
node {
    version = '18.18.2'
    npmVersion = '9.8.1'
    download = true
    workDir = file("${project.buildDir}/nodejs")
    npmWorkDir = file("${project.buildDir}/npm")
}
def frontendDir = file("../frontend")

// ✅ Use built-in npmInstall
tasks.npmInstall {
    workingDir = frontendDir
}

// ✅ Define npmBuild task
tasks.register("npmBuild", com.github.gradle.node.npm.task.NpmTask) {
    dependsOn tasks.npmInstall
    workingDir = frontendDir
    args = ["run", "build"]
}

// ✅ Clean static before copy
tasks.register("cleanFrontend", Delete) {
    delete "src/main/resources/static"
}

// ✅ Copy React build to Spring Boot static resources
tasks.register("copyFrontendBuild", Copy) {
    dependsOn("npmBuild")
    from("${frontendDir}/dist")
    into("src/main/resources/static")
}

// ✅ Ensure resources processing depends on copying React files
tasks.named("processResources") {
    dependsOn("copyFrontendBuild")
}

